<resources>
    <string name="app_name">NeWork</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_title">NeWork</string>
    <string name="login">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="sign_in_button">войти</string>
    <string name="sign_up_button">Нет логина? Зарегистрироваться</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="sign_up">регистрация</string>
    <string name="e_mail">Введите e-mail</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="menu_button_description">Кнопка меню</string>
    <string name="play_video_description">Просмотр видео</string>
    <string name="avatar_description">Фото профиля</string>
    <string name="play_audio">Воспроизведение аудио</string>
    <string name="edit_post">Редактировать</string>
    <string name="delete_post">Удалить</string>
    <string name="add_new_post">Добавить новый пост</string>
    <string name="avatar_input">Аватар пользователя</string>
    <string name="occupation_list">Опыт работы</string>
    <string name="job_avatar">Логотип компании</string>
    <string name="get_job_details">Получить подробную информацию о месте работы</string>
    <string name="event_picture_description">Картинка события</string>
    <string name="take_a_part_button">Участвовать</string>
    <string name="deny_button">Не участвовать</string>
    <string name="no_network">Нет сети</string>
    <string name="unknown_exception">Что-то пошло не так :(</string>
    <string name="refresh">Обновить</string>
    <string name="error_message">Что то пошло не так :(</string>
    <string name="inpu_name">Введите имя</string>
    <string name="menu_sign_in">Войти</string>
    <string name="menu_sign_up">Зарегистрироваться</string>
    <string name="menu_sign_out">Выйти</string>
    <string name="take_photo_description">Сделать фото</string>
    <string name="pick_photo_description">Выбрать фото</string>
    <string name="remove_photo_description">Удалить фото</string>
    <string name="menu_save">Сохранить</string>
    <string name="edit_post_name">Редактирование поста</string>
    <string name="download_mp3">mp3</string>
    <string name="download_mp4">mp4</string>
    <string name="load_ok">Успешно загружено</string>
    <string name="edit_event">Редактирование события</string>
    <string name="edit_event_name">Редактирование события</string>
    <string name="permissions_needed_title">Приложению нужно разрешение</string>
    <string name="permissions_needed_message">Нужны следующие разрешения:</string>
    <string name="everything_fine">OK</string>
    <string name="grant_storage_permissions_dialog_message">Нужен доступ к файлам!</string>
    <string name="online">Онлайн</string>
    <string name="offline">Офлайн</string>
    <string name="type_unknown">Способы участия уточняйте у организатора.</string>
    <string name="choose_event_type">Выберите тип</string>
    <string name="choose_event_type_description">Выбор типа мероприятия</string>
    <string name="add_new_occupation">Добавить место работы</string>
    <string name="period_of_work">Период работы здесь</string>
    <string name="till_now">По настоящее время</string>
    <string name="date_time_pick">Выбор даты и времени мероприятия</string>
    <string name="load_avatar">Загрузить аватар</string>
    <string name="name_company">Название фирмы</string>
    <string name="position">Должность</string>
    <string name="start">Год начала</string>
    <string name="end">Год окончания</string>
    <string name="save_button">Сохранить</string>
    <string name="cancel_button">Отменить</string>
    <string name="action_cancel">Отмена</string>

</resources>