<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SignUpFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:elevation="@dimen/elevation"
        app:cardCornerRadius="@dimen/corner_radius">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/inpu_name"
            android:importantForAutofill="no"
            android:inputType="text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:inputType="text"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/login"
            android:importantForAutofill="no"
            android:inputType="text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:inputType="text"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="135dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:inputType="text"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="190dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin"
                android:background="@color/white"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:elevation="@dimen/elevation"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />

</androidx.appcompat.widget.LinearLayoutCompat>