<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AuthFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation"
        app:cardCornerRadius="@dimen/corner_radius"
        android:layout_gravity="center"
        android:layout_marginTop="150dp" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:inputType="text"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:elevation="25dp"
        android:text="@string/sign_in_button"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:elevation="25dp"
        android:text="@string/sign_up_button"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />

</androidx.appcompat.widget.LinearLayoutCompat>